# bento

./: .gitignore  Bento_Assistant.spec  README.md  build_mac.py  build_win.py  pyproject.toml
config/: app_config.json  ui.json
prompts/: prompts.json
src/: desktop.py  main.py
src/chat/: models.py  router.py  service.py
src/core/: __init__.py  config.py  state.py
src/rag/: __init__.py  document_processor.py  document_store.py  embeddings.py  models.py  router.py  service.py
static/: index.html
